Update String.intern.md